[tool.poetry]
name = "c2"
version = "0.1.0"
description = "c2 in python"
authors = ["rais <rais@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^4.2.0"
pytest = "^8.3.5"


[tool.poetry.scripts]
try = "ip a"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
